fix scrollbar width issue

--- a/src/components/Hero/styles/hero.scss
+++ b/src/components/Hero/styles/hero.scss
@@ -454,7 +454,7 @@
             }
 
             .debit-amount{
-                width: 26%;
+                width: 24%;
                 padding: 0px;
                 margin-left: 0px !important;
             }
